Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2669

[C++] EP_CXX_FLAGS not passed on when building gbenchmark

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • C++
    • None

    Description

      I found when building with -DCMAKE_CXX_FLAGS='-D_GLIBCXX_USE_CXX11_ABI=0' (using a conda-forge-based C++ toolchain) that the benchmark executables are broken. This is caused by failing to pass the EP_CXX_FLAGS CMake variable when building gbenchmark

      Attachments

        Activity

          People

            wesm Wes McKinney
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment