Fix compiler warnings with gcc 7. Pass EP_CXX_FLAGS when building gbenchmark per ARROW-2669